--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/benfoxall/live-server#readme",
   "dependencies": {
     "basic-auth": "^1.0.3",
+    "body-parser": "^1.15.0",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "guess-content-type": "^0.1.0",
     "ioredis": "^1.15.1"
   }
 }
